src/test/scala/wacc/ext_func_overload/pairs/invalidAbstractReturnType.wacc
# Extension: fuunction overloading
# A combination of different number of parameters, 
# parameter types and return types

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  pair(int, pair(char, bool)) f1(pair(int, pair(char, bool)) x) is
    return x
  end
  pair(int, pair) f2(pair(int, pair(char, bool)) x) is
    return x
  end
  pair(int, pair(char, bool)) f3(pair(int, pair) x) is
    return x
  end
  pair(int, pair) f4(pair(int, pair) x) is
    return x
  end
  pair(char, bool) a = newpair('a', true) ;
  pair(int, pair) b = newpair(1, a) ;
  pair(int, pair) c = newpair(1, null) ;
  pair(int, pair(char, bool)) d = call f1(b) ;
  pair(int, pair) e = call f1(b) ;
  pair(int, pair(char, bool)) f = call f1(c) ;
  pair(int, pair) g = call f1(c) ;
  pair(int, pair(char, bool)) h = call f1(null) ;
  pair(int, pair) i = call f1(null) 
  
  # ;
  # int j = fst d ;
  # char k = fst snd d ;
  # bool l = snd snd d ;
  # println j ;
  # println k ;
  # println l ;
  # j = fst e ;
  # k = fst snd e ;
  # l = snd snd e ;
  # println j ;
  # println k ;
  # println l ;
  # j = fst f ;
  # pair(char, bool) m = snd f ;
  # println j ;
  # println m ;
  # j = fst g ;
  # m = snd g ;
  # println j ;
  # println m ;
  # println h ;
  # println i
end
